Fix z-index

--- a/core/static/css/style.scss
+++ b/core/static/css/style.scss
@@ -43,6 +43,7 @@ body {
     grid-gap: 15px;
     font-size: 10px;
     padding: 5px;
+    z-index: 10;
 
     .rule {
 
